tests/test-dirs/upstream-typing-recovery/original-tests/id_wrong_ty.compilers.reference
File "id_wrong_ty.ml", line 10, characters 28-38:
10 | let rec id_wrong_ty : int = fun x -> x
                                 ^^^^^^^^^^
Error: This expression should not be a function, the expected type is int
