tests/test-dirs/upstream-typing-recovery/original-tests/id_wrong_ty.ml
(* TEST
   flags = " -typing-recovery";
   ocamlc_byte_exit_status = "2";
   setup-ocamlc.byte-build-env;
   compile_only = "true";
   ocamlc.byte;
   check-ocamlc.byte-output;
*)

let rec id_wrong_ty : int = fun x -> x
let f () = id_wrong_ty + 11
